--- a/coin-page.html
+++ b/coin-page.html
@@ -43,7 +43,7 @@
                 </div>
             </div>
             <!-- Menu navbar -->
-            <div class="border-bottom border-gray py-3">
+            <div class="py-3">
                 <div class="container d-flex  justify-content-between">
                     <div class="d-flex flex-row align-items-center nav-bar">
                         <a href="index.html" class="mx-0">
@@ -244,7 +244,7 @@
                                         <div class="headertxt ">
                                             <span class="txtHolder ">BSCContract Address: </span>
                                             <span id="copytxt"
-                                                class="text-break mb-3">0x333FD139cAeF6Aa31056cC905987b77B1044d259</span>
+                                                class="text-break mb-3 user-select-all">0x333FD139cAeF6Aa31056cC905987b77B1044d259</span>
                                             <button onclick="copyToClipboard('copytxt')" class="btn-0 ms-2">
                                                 <i class="fa-solid fa-paste accent "></i>
                                             </button>
@@ -268,7 +268,7 @@
                     </div>
                     <div class="card1 my-0 col ">
                         <div class=" row p-0">
-                            <div class="col mx-2 my-3 p-0">
+                            <div class="col mx-2 my-3 p-3">
                                 <div>
                                     <h2 class="mb-3">
                                         Charts & Prices
@@ -433,9 +433,9 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col twitter-fit ">
+                    <div class="col  twitter-fit ">
                         <a class="twitter-timeline" data-height="650" data-theme="light"
-                            href="https://twitter.com/TwitterDev?ref_src=twsrc%5Etfw">Tweets by TwitterDev</a>
+                            href="https://twitter.com/binance?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor">Tweets by TwitterDev</a>
                         <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
                     </div>
                 </div>
