--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 </div>
             </div>
             <!-- Menu navbar -->
-            <div class="border-bottom border-gray py-3">
+            <div class="py-3">
                 <div class="container d-flex  justify-content-between">
                     <div class="d-flex flex-row align-items-center nav-bar">
                         <a href="index.html" class="mx-0">
@@ -52,7 +52,7 @@
                         <div class="d-none d-lg-block ms-3">
                             <a href="#">Contact Us</a>
                             <a href="#">Advertising</a>
-                            <a href="#">Submit Coin</a>
+                            <a href="submit-coin.html">Submit Coin</a>
                         </div>
                     </div>
                     <div class="d-flex gap-3">
