--- a/watch-list.html
+++ b/watch-list.html
@@ -43,7 +43,7 @@
                 </div>
             </div>
             <!-- Menu navbar -->
-            <div class="border-bottom border-gray py-3">
+            <div class="py-3">
                 <div class="container d-flex  justify-content-between">
                     <div class="d-flex flex-row align-items-center nav-bar">
                         <a href="index.html" class="mx-0">
